# rtsp-lite-player

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.example.json  vcpkg.json
src/: app.manifest  app.rc  main.cpp
